[gd_scene load_steps=9 format=3 uid="uid://c7i1k771y3ein"]

[ext_resource type="Script" uid="uid://bpwoljxaugh5r" path="res://Enemies/imp.gd" id="1_72de0"]
[ext_resource type="Texture2D" uid="uid://bgucfh1yesp3f" path="res://Graphics/Enemies/Imp/imp_idle_anim_f0.png" id="2_4kbg1"]
[ext_resource type="Texture2D" uid="uid://dxv0twgpg08k5" path="res://Graphics/Enemies/Imp/imp_idle_anim_f1.png" id="3_f0dat"]
[ext_resource type="Texture2D" uid="uid://ccvpt7x2cmofh" path="res://Graphics/Enemies/Imp/imp_idle_anim_f2.png" id="4_qlwsy"]
[ext_resource type="Texture2D" uid="uid://ity0b7bg8hg0" path="res://Graphics/Enemies/Imp/imp_idle_anim_f3.png" id="5_ua4xr"]

[sub_resource type="SpriteFrames" id="SpriteFrames_t4cgm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_4kbg1")
}, {
"duration": 1.0,
"texture": ExtResource("3_f0dat")
}, {
"duration": 1.0,
"texture": ExtResource("4_qlwsy")
}, {
"duration": 1.0,
"texture": ExtResource("5_ua4xr")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_guje4"]
radius = 39.3192

[sub_resource type="CircleShape2D" id="CircleShape2D_r37nf"]
radius = 37.1214

[node name="Imp" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 16
collision_mask = 3
script = ExtResource("1_72de0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(10, 10)
sprite_frames = SubResource("SpriteFrames_t4cgm")
autoplay = "default"
frame_progress = 0.613815

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(8, 36)
rotation = -1.5708
scale = Vector2(5, 5)
target_position = Vector2(-1.90735e-06, 15.8)
collision_mask = 2

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(8, 36)
rotation = 1.5708
scale = Vector2(5, 5)
target_position = Vector2(-1.90735e-06, 15.8)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 27)
shape = SubResource("CircleShape2D_guje4")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(5, 27)
scale = Vector2(1.2, 1.2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_r37nf")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
